# anime-librarian

./: .env.example  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  config.py  errors.py  file_renamer.py  main.py  models.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: code-quality.yml  pr-tests.yml
Dify DSL File/: Anime Librarian.yml
scripts/: README.md  lint.py  lint.sh  lint_markdown.py
src/anime_librarian/: __init__.py  arg_parser.py  config.py  config_provider.py  console.py  core.py  enums.py  errors.py  file_renamer.py  http_client.py  input_reader.py  logger.py  logging_config.py  main.py  models.py  output_writer.py  rich_core.py  rich_output_writer.py  types.py
tests/: conftest.py  mock_dify_server.py  test_arg_parser.py  test_config.py  test_config_provider.py  test_console.py  test_console_methods.py  test_core.py  test_core_error_handling.py  test_errors.py  test_file_renamer.py  test_file_renamer_error_handling.py  test_http_client.py  test_input_reader.py  test_integration_with_mock_server.py  test_logger.py  test_logging_config.py  test_main.py  test_main_app.py  test_mock_server.py  test_output_formats.py  test_output_writer.py  test_rich_components.py
tests/fixtures/: mock_server_fixtures.py
